# backfill

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  backfill-web-spec.xlsx  install.sh
.claude-plugin/: marketplace.json
.codex/: feature-approvals.jsonl  feature-ideas.jsonl  feature-runs.jsonl  feature-spec-reviews.jsonl
.codex/feature-specs/: bf-20260707-action-json-escaping.md  bf-20260707-ci-action-docs.md  bf-20260707-curl-installer-checksum.md  bf-20260707-npm-family-contract.md  bf-20260707-shadow-manager-tests.md  bf-20260708-agent-rewriter-fixtures.md  bf-20260708-dbt-sqlmesh-progress-fixtures.md  bf-20260708-python-launcher-fixtures.md  bf-20260708-release-asset-ordering.md  bf-20260712-plugin-activation-smoke.md  bf-20260712-statusline-cache-fixtures.md  (+1 more)
action/: action.yml  run.sh  test_action.sh
assets/: dbt-clean.tape  dbt-demo.tape  dbt.tape
cli/: README.md  ads.go  ads_test.go  agents.go  agents_test.go  agentwrap.go  agentwrap_test.go  aliases.go  aliases_test.go  collapse.go  completion.go  completion_test.go  config.go  dbtprogress.go  dbtprogress_test.go  drain.go  drain_test.go  go.mod  go.sum  main.go  notify.go  notify_test.go  receipt.go  receipt_test.go  rotator.go  rotator_test.go  run.go  run_test.go  spinner.go  spinner_test.go  sqlmeshprogress.go  sqlmeshprogress_test.go  statusline.go
gtm/: forum-post-dbt-beta.md
python/: README.md  pyproject.toml  test_backfill_cli_launcher.py
python/backfill_cli/: __init__.py  __main__.py
scripts/: validate_release_assets.py
tests/: install_checksum_test.sh  test_release_asset_gate.py
(+7 files in other folders)
